--- a/Angular_SICDOC/sicdoc/src/index.html
+++ b/Angular_SICDOC/sicdoc/src/index.html
@@ -17,14 +17,17 @@
 <!--Importamos Jquery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
 
-<script type="text/javascript" src="app/views/login/js.component.js"></script>
+<script src="assest/js/register.component.js"></script>
+
+<!--Importamos Jquery -->
+<!-- <script type="text/javascript" src="app/views/login/register.component.js"></script> -->
 
 </head>
-<body>
+<body >
   <div class="container">
     <!-- <app-navbar></app-navbar> -->
     <app-root>Cargado ...</app-root>
-    
+
   </div>
 </body>
 </html>
