--- a/Angular_SICDOC/sicdoc/src/index.html
+++ b/Angular_SICDOC/sicdoc/src/index.html
@@ -18,6 +18,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
 
 <script src="assest/js/register.component.js"></script>
+<!-- <script src="assets/js/ingreso.comunicacion.component.js"></script> -->
 
 <!--Importamos Jquery -->
 <!-- <script type="text/javascript" src="app/views/login/register.component.js"></script> -->
