--- a/Angular_SICDOC/sicdoc/src/index.html
+++ b/Angular_SICDOC/sicdoc/src/index.html
@@ -17,7 +17,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-  
+
 
   <!-- Librerias de las Tablas a Utilizar -->
   <link rel="stylesheet" type="text/css" href="assets/js/DataTables/datatables.min.css"/>
@@ -35,7 +35,8 @@
 
   <div class="container">
     <!-- <app-navbar></app-navbar> -->
-    <app-root>Cargado ...</app-root>
+    <!-- <app-root>Cargado ...</app-root> -->
+    <app-root> Cargando ... </app-root>
 
   </div>
 </body>
