--- a/Angular_SICDOC/sicdoc/src/index.html
+++ b/Angular_SICDOC/sicdoc/src/index.html
@@ -24,7 +24,7 @@
 
   <script type="text/javascript" src="assets/js/DataTables/datatables.min.js"></script>
 
-<script src="assets/js/register.component.js"></script>
+  <!-- <script src="assets/js/register.component.js"></script> -->
 <!-- <script src="assets/js/ingreso.comunicacion.component.js"></script> -->
 
 <!--Importamos Jquery -->
