--- a/Angular_SICDOC/sicdoc/src/index.html
+++ b/Angular_SICDOC/sicdoc/src/index.html
@@ -23,6 +23,13 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 
 
+  <!-- Libreias para la Carga de los Files input -->
+  <link href="http://rawgithub.com/moxiecode/plupload/master/js/jquery.plupload.queue/css/jquery.plupload.queue.css" type="text/css" rel="stylesheet" media="screen">
+
+  <script src="http://rawgithub.com/moxiecode/plupload/master/js/plupload.full.min.js" type="text/javascript"></script>
+  <script src="http://rawgithub.com/moxiecode/plupload/master/js/jquery.plupload.queue/jquery.plupload.queue.min.js" type="text/javascript"></script>
+
+
 
   <!-- Librerias de las Tablas a Utilizar -->
   <link rel="stylesheet" type="text/css" href="assets/js/DataTables/datatables.min.css"/>
