--- a/Angular_SICDOC/sicdoc/src/index.html
+++ b/Angular_SICDOC/sicdoc/src/index.html
@@ -48,6 +48,12 @@
 </body>
 
 <!-- Librerias para las DataTables -->
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.js">
+</script>
+
+<script type="text/javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js">
+</script>
+
 <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.4.2/js/dataTables.buttons.min.js">
 </script>
 
@@ -69,6 +75,4 @@
 <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.4.2/js/buttons.print.min.js">
 </script>
 
-<script type="text/javascript" src="https://cdn.datatables.net/buttons/1.4.2/js/buttons.print.min.js">
-</script>
 </html>
