--- a/Angular_SICDOC/sicdoc/src/index.html
+++ b/Angular_SICDOC/sicdoc/src/index.html
@@ -78,4 +78,7 @@
 <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.4.2/js/buttons.print.min.js">
 </script>
 
+<script type="text/javascript" src="https://cdn.datatables.net/select/1.2.5/js/dataTables.select.min.js">
+</script>
+
 </html>
