--- a/Angular_SICDOC/sicdoc/src/index.html
+++ b/Angular_SICDOC/sicdoc/src/index.html
@@ -32,9 +32,11 @@
   <script src="http://rawgithub.com/moxiecode/plupload/master/js/jquery.plupload.queue/jquery.plupload.queue.min.js" type="text/javascript"></script>
 
 
-
   <!-- Librerias de las Tablas a Utilizar -->
   <link rel="stylesheet" type="text/css" href="assets/js/DataTables/datatables.min.css"/>
+
+  <!-- Libreria de Toasty -->
+  <link rel="stylesheet" href="https://unpkg.com/ng2-toasty@4.0.0/style.css">
 
   <script type="text/javascript" src="assets/js/DataTables/datatables.min.js"></script>
 
